package ar.edu.davinci.dv_ds_20261c_g29.dominio.enums;

public enum EstadoPrenda {
    NUEVA,
    PROMOCION,
    LIQUIDACION
}